Add 5 player poker and extracted shared classes
- Add BaseCardGamePanelUI for UI panel plugin and button action handling
- Add BaseGameDelegate abstract class for dialog delegate with lifecycle and callbacks
- Introduce Card record representing rank, suit, and game type with utility methods
- Implement CardFlipAnimation class to manage card flip animation phases and progression
- Add CardRenderingUtils with methods to render card faces, animated flips, and table background
- Add CardSprites for loading and accessing card suit and rank sprite resources
- Add CasinoConfig to load and store casino configuration settings from JSON files
- Update BlackjackHandler imports to new card package namespace
- Minor formatting and structural cleanup in ArenaHandler and BlackjackHandler files
- Add comprehensive casino_settings.json configuration file with parameters for VIP, poker, gacha, arena, and more